resolve comments #PR 1
